--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>WELCOME TO BUrPage</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <!-- <link href="http://fonts.googleapis.com/css?family=Open+Sans|Montserrat:700" rel="stylesheet" type="text/css"> -->
+  <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no">
 </head>
 <body>
   <div id="root"></div>
