--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>WELCOME TO BUrPage</title>
-  <!-- <link href="http://fonts.googleapis.com/css?family=Open+Sans|Montserrat:700" rel="stylesheet" type="text/css"> -->
+  <title>BUrPage</title>
   <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no">
 </head>
+
 <body>
   <div id="root"></div>
+  <script>
+    // if ("serviceWorker" in navigator)
+    //   window.addEventListener("load", () => {
+    //     navigator.serviceWorker.register("./sw.js", {
+    //         scope: '/'
+    //       })
+    //       .then((registration) => {
+    //         console.log(`ServiceWork registration successful`)
+    //       })
+    //       .catch((err) => {
+    //         console.log(`ServiceWork registration failed`)
+    //       })
+    //   })
+  </script>
 </body>
+
 </html>
